Se suben cambios donde se agregan archivos para crear imagen docker de la aplicacion con conexion a sql server

--- a/Web/Views/Invoice/Invoice.cshtml
+++ b/Web/Views/Invoice/Invoice.cshtml
@@ -43,7 +43,7 @@
                         <label class="col-form-label" asp-for="Invoice.ClientLastName"></label>
                         <input asp-for="Invoice.ClientLastName"
                                class="form-control"
-                               placeholder="Nombre artículo" />
+                               placeholder="Apellido Cliente" />
                         <span asp-validation-for="Invoice.ClientLastName" class="text-danger"></span>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                         <label class="col-form-label" asp-for="Invoice.ClientDocument"></label>
                         <input asp-for="Invoice.ClientDocument"
                                class="form-control"
-                               placeholder="Dirección Cliente" />
+                               placeholder="Documento Cliente" />
                         <span asp-validation-for="Invoice.ClientDocument" class="text-danger"></span>
                     </div>
                     <div class="col-md-6 form-group">
