--- a/Web/Views/Product/Index.cshtml
+++ b/Web/Views/Product/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="col-md-6">
         <button class="btn btn-primary float-end" onclick="modalNewProduct()">
             <i class="fas fa-plus-square"></i>
-            Nuevo Pructo
+            Nuevo Producto
         </button>
     </div>
 </div>
@@ -50,14 +50,14 @@
                         <div class="col-md-6 form-group">
                             <label class="col-form-label" asp-for="Code"></label>
                             <input asp-for="Code"
-                                   placeholder="Nombre Cliente"
+                                   placeholder="Codigo Producto"
                                    class="form-control" />
                             <span asp-validation-for="Code" class="text-danger"></span>
                         </div>
                         <div class="col-md-6 form-group">
                             <label class="col-form-label" asp-for="ProductName"></label>
                             <input asp-for="ProductName"
-                                   placeholder="Nombre Cliente"
+                                   placeholder="Nombre Producto"
                                    class="form-control" />
                             <span asp-validation-for="ProductName" class="text-danger"></span>
                         </div>
@@ -66,14 +66,14 @@
                         <div class="col-md-6 form-group">
                             <label class="col-form-label" asp-for="Count"></label>
                             <input asp-for="Count"
-                                   placeholder="Nombre Cliente"
+                                   placeholder="Cantidad"
                                    class="form-control" />
                             <span asp-validation-for="Count" class="text-danger"></span>
                         </div>
                         <div class="col-md-6 form-group">
                             <label class="col-form-label" asp-for="Price"></label>
                             <input asp-for="Price"
-                                   placeholder="Nombre Cliente"
+                                   placeholder="Precio"
                                    class="form-control" />
                             <span asp-validation-for="Price" class="text-danger"></span>
                         </div>
