--- a/Web/Views/Invoice/Index.cshtml
+++ b/Web/Views/Invoice/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-6">
         <a class="btn btn-primary float-end" asp-controller="Invoice" asp-action="Invoice">
               <i class="fas fa-plus-square"></i>
-            Nuevo Factura
+            Nueva Factura
         </a>
     </div>
 </div>
