--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -3,6 +3,52 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bienvenido a Z-Inventario</h1>
-    <p>Inventario general - Poli</p>
+    <h1 class="display-4">Bienvenido a Z-Inventario</h1>  <hr />
+
+    <h2>Sistema Gestion de Inventario</h2>
+     <h3> Pruebalo Gratis!  </h3> por 30 dias <br />
+      <img   src="img/inventory-icon-png-11.jpg"
+   width="400"
+  height="341" />
+  <h4>¿Buscas la solución perfecta para gestionar tu inventario de manera eficiente y sin complicaciones? </h4> 
+    <p>Nuestro sistema de gestión de inventario web es la herramienta que estabas esperando <br />
+    Podrás rastrear tus productos, gestionar pedidos, recibir notificaciones de inventario bajo y mucho más, todo con unos pocos clics.   </p> <br />
 </div>
+
+<div class="text-center">
+    
+        <a href="https://localhost:7133/Product" class="boton-accion">Probar Ahora</a>
+</div>  
+
+<style> 
+    body {
+    background: linear-gradient(to right, white, #56CCF2);
+         background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el fondo */
+    }
+
+
+    .boton-accion {
+        
+        background-color: green;
+        color: white;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+        border: none;
+    }
+
+        .boton-accion:hover {
+            background-color: white;
+            color: green;
+        }
+        
+        p{
+        font-size: 18px;
+        
+        }
+</style>
+   
