se crea docker file, y se hace ajuste de data semilla.

--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -6,29 +6,30 @@
     <h1 class="display-4">Bienvenido a Z-Inventario</h1>  <hr />
 
     <h2>Sistema Gestion de Inventario</h2>
-     <h3> Pruebalo Gratis!  </h3> por 30 dias <br />
-      <img   src="img/inventory-icon-png-11.jpg"
-   width="400"
-  height="341" />
-  <h4>¿Buscas la solución perfecta para gestionar tu inventario de manera eficiente y sin complicaciones? </h4> 
-    <p>Nuestro sistema de gestión de inventario web es la herramienta que estabas esperando <br />
-    Podrás rastrear tus productos, gestionar pedidos, recibir notificaciones de inventario bajo y mucho más, todo con unos pocos clics.   </p> <br />
+    <h3> Pruebalo Gratis!  </h3> por 30 dias <br />
+    <img src="~/img/oferta.jpeg" class="mt-1 mb-3"
+         width="400"
+         height="100%" />
+    <h4>¿Buscas la solución perfecta para gestionar tu inventario de manera eficiente y sin complicaciones? </h4>
+    <p>
+        Nuestro sistema de gestión de inventario web es la herramienta que estabas esperando <br />
+        Podrás rastrear tus productos, gestionar pedidos, recibir notificaciones de inventario bajo y mucho más, todo con unos pocos clics.
+    </p> <br />
 </div>
 
 <div class="text-center">
-    
-        <a href="https://localhost:7133/Product" class="boton-accion">Probar Ahora</a>
-</div>  
 
-<style> 
+    <a href="https://localhost:7133/Product" class="boton-accion">Probar Ahora</a>
+</div>
+
+<style>
     body {
-    background: linear-gradient(to right, white, #56CCF2);
-         background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el fondo */
+        background: linear-gradient(to right, white, #56CCF2);
+        background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el fondo */
     }
 
 
     .boton-accion {
-        
         background-color: green;
         color: white;
         padding: 10px 20px;
@@ -45,10 +46,9 @@
             background-color: white;
             color: green;
         }
-        
-        p{
+
+    p {
         font-size: 18px;
-        
-        }
+    }
 </style>
-   
+
